--- a/public/style.css
+++ b/public/style.css
@@ -16,22 +16,34 @@ h1 {
   text-align: center;
 }
 
-h2 {
+h2, h3, h4 {
   text-align: center;
   font-style: normal;
   font-weight: 200;
-}
-
-h3 {
-  text-align: center;
-  font-style: normal;
-  font-weight: 200;
+  height: 1vh;
 }
 
 #box {
   width: 75%;
   margin: 10% auto;
   height: 100vh;
+  background-color: rgb(0, 51, 102, 0.6);
+  border-radius: 40px;
+}
+
+#room_box {
+  width: 75%;
+  margin: 10% auto;
+  height: 125vh;
+  background-color: rgb(0, 51, 102, 0.6);
+  border-radius: 40px;
+}
+
+#box_explore {
+  width: 75%;
+  margin: 10% auto;
+  /* display: flex; */
+  height: 350vh;
   background-color: rgb(0, 51, 102, 0.6);
   border-radius: 40px;
 }
@@ -102,11 +114,29 @@ form hr {
   border: 1px solid #cceeff;
 }
 
+#explorer {
+  width: 98%;
+  border: 1px solid #cceeff;
+}
+
 button {
   border-radius: 8px;
-  height: 5vh;
-  width: 80px;
+  height: 4vh;
+  width: 100px;
   font-family: aileron, sans-serif;
+  font-style: normal;
+  font-weight: 200;
+  background-color: #fff9e6;
+  border: 2px solid #ccd9ff;
+}
+
+#big_button {
+  border-radius: 8px;
+  height: 4vh;
+  width: 130px;
+  font-family: aileron, sans-serif;
+  font-style: normal;
+  font-weight: 200;
   background-color: #fff9e6;
   border: 2px solid #ccd9ff;
 }
