--- a/views/explore_filtered_rooms.erb
+++ b/views/explore_filtered_rooms.erb
@@ -11,43 +11,46 @@
     <p></header>
   <body>
     <img src='images/makers_logo.jpg' id='logo'>
-    <section id='box'>
+    <section id='box_explore'>
       <section id='explore_filtered_rooms'>
       <form id='date_filter' action="/explore_filtered_rooms" method="post">
-      <h3>Filter out available rooms by date</h3>
-      Check in: <input type='date' name='check_in_start' 
-                           value="<%= Date.today.strftime("%Y-%m-%d") %>"
-                           min="<%= Date.today.strftime("%Y-%m-%d")%>" required>
-      Check out: <input type='date' name='check_out_end' 
-                           value="<%= Date.today.strftime("%Y-%m-%d") %>"
-                           min="<%= Date.today.strftime("%Y-%m-%d")%>" required><br>
-      <br><input type="submit" name="filter_rooms" value="Filter rooms"><br>
-      <br></form>
-        <hr>
-        <br><h2>Showing rooms available from <%= PrintDate.selected_date(@filtered_dates.first) %> to <%= PrintDate.selected_date(@filtered_dates.last)%></h2>
-        <form action="/create_listing" method="GET">
-          <input type="submit" name="add_listing" value="Add new listing!">
-        </form><br>
-        <hr>
-          <% hit_counter = 0 %>
-          <% Room.all.each do |room| %>
-            <h2><% if ((room.availability & @filtered_dates ).any?) == true %></h2>
+        <h3>Filter out available rooms by date</h3><br>
+        <a>Check in: </a>
+        <input type='date' name='check_in_start' 
+               value="<%= Date.today.strftime("%Y-%m-%d") %>"
+               min="<%= Date.today.strftime("%Y-%m-%d")%>" required>
+        <a>Check out: </a>
+        <input type='date' name='check_out_end' 
+               value="<%= Date.today.strftime("%Y-%m-%d") %>"
+               min="<%= Date.today.strftime("%Y-%m-%d")%>" required><br>
+        <br><button type="submit" name="filter_rooms" style>Filter rooms</button><br>
+      </form><br>
+      <hr>
+      <form action="/create_listing" method="GET">
+        <br><button type="submit" name="add_listing" id='big_button' style>Add new listing!</button><br>
+      </form><br>
+      <br><h2>Showing rooms available from <%= PrintDate.selected_date(@filtered_dates.first) %> to <%= PrintDate.selected_date(@filtered_dates.last)%></h2>
+      <br><hr>
+      <section>
+        <% hit_counter = 0 %>
+        <% Room.all.each do |room| %>
+          <h2><% if ((room.availability & @filtered_dates ).any?) == true %></h2>
             <% hit_counter += 1 %>
-          <h2><%= room.title %></h2>
-          <%= room.description %><br>
-          Available for £<%= '%.2f' % room.price_per_night %> per night.<br>
-          posted by <% @name = User.find_by(id: "#{room.user_id}") %><%= @name.user_name %>
-        </form>
-        <form action="/book" method="post"><br>
-          <input type="hidden" name="room_id" value="<%=room.id%>">
-          <input type="submit" value="Book It!"><br>
-          <br><hr>
-        </form>
-        <% end %>
+            <h2><%= room.title %></h2><br>
+            <img src="<%= room.picture_url %>" id='room_url'>
+            <h4>Available for £<%= '%.2f' % room.price_per_night %> per night</h4>
+            <h4>posted by <% @name = User.find_by(id: "#{room.user_id}") %><%= @name.user_name %></h4>
+            <form action="/book" method="post"><br>
+              <input type="hidden" name="room_id" value="<%=room.id%>">
+              <input type="submit" value="Book It!"><br>
+              <br><hr>
+            </form>
+          <% end %>
         <% end %>
         <% if hit_counter == 0 %>
-        <h3>Sorry no rooms available on those dates!</h3>
-        <%end%></ul> 
+          <h2>Sorry no rooms available on those dates!</h2>
+        <% end %>
+      </section>
       </section>
     </section>
   </body>
