--- a/views/new_listing.erb
+++ b/views/new_listing.erb
@@ -12,23 +12,23 @@
   <body>
     <img src='images/makers_logo.jpg' id='logo'>
     <section id='box'>
-      <br><h2>Add a new listing!</h2>
+      <br><h2>Add a new listing!</h2><br>
       <form action="/edit_listing" method="POST">
-        Name of listing: <input type="text" name="title" required><br>
-        Description: <textarea name="description" rows="4" cols="30" required></textarea><br>
-        Price per day (£): <input type="text" name="price_per_night" required><br>
-        Picture of space: <input type="url" id='url_pic' placeholder='Please only enter a URL' name="picture_url"><br>
-      <section class='listing_range'>
-        Select the maximum date range when your room is available.<br>
-        If you wish to block out unavailable dates during this time you can do so on the next page.<br>
-        Start of listing: <input type='date' name='availability_range_min' 
+        <a>Name of listing: </a><input type="text" name="title" required><br>
+        <a>Description: </a><textarea name="description" rows="2" cols="30" required></textarea><br>
+        <a>Price per day (£): </a><input type="text" name="price_per_night" required><br>
+        <a>Picture of space: </a><input type="url" id='url_pic' placeholder='Please only enter a URL' name="picture_url"><br>
+      <section class='listing_range'><br>
+        <h3>Select the maximum date range for when your room is available.</h3>
+        <h3>You can block out unavailable dates during this time period after submitting your listing.</h3><br>
+        <a>Start of listing: </a><input type='date' name='availability_range_min' 
                              value="<%= Date.today.strftime("%Y-%m-%d") %>"
                              min="<%= Date.today.strftime("%Y-%m-%d")%>" required><br>
-        End of listing: <input type='date' name='availability_range_max' 
+        <a>End of listing: </a><input type='date' name='availability_range_max' 
                              value="<%= Date.today.strftime("%Y-%m-%d") %>"
                              min="<%= Date.today.strftime("%Y-%m-%d")%>" required><br>
       </section>
-        <input type="submit" name="add_listing" value="Add listing!">
+        <br><button type="submit" name="ladd_listing" style>Add listing!</button>
       </form>
     </section>
   </body>
