Got all tests passing with 100% coverage, tinkered some HTML, tried to tidy up /requests with columns, added My Listings button to toolbar

--- a/public/style.css
+++ b/public/style.css
@@ -141,5 +141,17 @@ button {
   border: 2px solid #ccd9ff;
 }
 
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 button:hover {opacity: 0.6}
 
