--- a/views/explore_rooms.erb
+++ b/views/explore_rooms.erb
@@ -6,6 +6,7 @@
   </head>
     <header><p style="text-align:right;">Logged in as <%="#{@signed_in_user.user_name}" %>&nbsp;
     <a href="/explore_rooms">Explore Rooms</a>&nbsp;
+    <a href="/listings">My Listings</a>&nbsp;
     <a href="/requests">Requests</a>&nbsp;
     <a href="/logout">Log Out</a>
     <p></header>
