--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,11 @@ form {
 
 h1 {
   text-align: center;
+  font-size: 45px;
+  font-weight: 200;
+  height: 4vh;
 }
+
 
 h2, h3, h4 {
   text-align: center;
