--- a/views/request_confirmation.erb
+++ b/views/request_confirmation.erb
@@ -12,13 +12,15 @@
   <body>
     <img src='images/makers_logo.jpg' id='logo'>
     <section id='box'>
-      <br><h2>Request made for <%=Room.find_by(id: "#{@current_request.room_id}").title %> 
-      from <%= @current_request.date_from %> to <%= @current_request.date_to %><br>
-      Please note this is not an official booking, and the owner will need to approve this request.<br>
-      You will be notified when this happens
-      </h2>
-      <div>
-      </div>
+      <form action="/explore_rooms" method="GET">
+        <br><h2>Request made for <%=Room.find_by(id: "#{@current_request.room_id}").title %> </h2><br><hr>
+        <img src="<%= Room.find_by(id: "#{@current_request.room_id}").picture_url %>" id='room_url'><hr>
+        <h3>From <%= PrintDate.selected_date(@current_request.date_from) %> to 
+            <%= PrintDate.selected_date(@current_request.date_to) %></h3><br>
+        <h3>Please note that this is not an official booking confirmation. The home</h3>
+        <h3>owner will need to approvethis request you will be notified with updates.</h3>
+        <br><button type="submit" name="explore" id='big_button' style>Explore more rooms!</button><br>
+      </form>
     </section>
   </body>
 </html>
