--- a/views/listings.erb
+++ b/views/listings.erb
@@ -10,17 +10,25 @@
     <a href="/requests">Requests</a>&nbsp;
     <a href="/logout">Log Out</a>
     <p></header>
-    <body>
-      <section id=‘box’>
-      <h1>Your listings</h1>
-      <div>
-      <%= "#{@rooms.last.title} added!" %>
-      </div>
-      <div>
-        <% @rooms.each do |room| %>
-          <li><%= room.title %> <%= room.availability %></li>
-        <% end %>
-      </div>
-    </section>
+  <body>
+    <img src='images/makers_logo.jpg' id='logo'>
+    <section id='box_explore'>
+    <section>
+    <br><h1>Showing all rooms listed by <%= @signed_in_user.first_name.capitalize %>!</h1><br>
+    <form action="/create_listing" method="GET">
+      <button type="submit" name="add_listing" id='big_button' style>Add new listing!</button><br>
+    </form><br>
+    <hr id='explorer'>
+        </form><br>
+      <form>
+      <% @rooms.reverse.each do |room| %>
+        <h2><%= room.title %></h2>
+        <h4>Available for £<%= '%.2f' % room.price_per_night %> per night</h4>
+        <img src="<%= room.picture_url %>" id='room_url'><br>
+      <hr>
+      <% end %><br>
+      </form>
+      </section>
   </body>
 </html>
+
