requests & listings page tidied up

--- a/views/invalid_login.erb
+++ b/views/invalid_login.erb
@@ -12,8 +12,8 @@
         <form action="/login" method="post"><br>
           <input type="text" placeholder='Username' name="user_name"><br>
           <input type="password" placeholder='Password' name="password"><br>
-          <input type="submit" value="Log In"><br>
-        </form>
+          <br><button type="submit" name="submt" style>Log In</button>
+        </form><br>
         <hr>
         <h3>Not registered yet? Sign up <a href="/">here</a>!</h3>
       </section>
