--- a/views/explore_rooms.erb
+++ b/views/explore_rooms.erb
@@ -9,9 +9,10 @@
     <a href="/listings">My Listings</a>&nbsp;
     <a href="/requests">Requests</a>&nbsp;
     <a href="/logout">Log Out</a>
+    <img src='images/makers_logo.jpg' id='logo'>
     <p></header>
   <body>
-    <img src='images/makers_logo.jpg' id='logo'>
+    <%# <img src='images/makers_logo.jpg' id='logo'> %>
     <section id='box_explore'>
       <%# <form> %>
         <section>
