Requests listings cleanup (#14)
* Tidied up listings.erb as well as some minor changes across the board

* requests & listings page tidied up

Co-authored-by: William Day <williamjday11@gmail.com>

--- a/public/style.css
+++ b/public/style.css
@@ -97,6 +97,13 @@ input {
   border: 2px solid #ccd9ff;
 }
 
+#explore_url {
+  height: 70px;
+  display: block;
+  margin: auto;
+}
+
+
 hr {
   width: 98%;
   border: 1px solid #cceeff;
@@ -116,6 +123,16 @@ hr {
 form hr {
   width: 30%;
   border: 1px solid #cceeff;
+}
+
+#req_hr {
+  width: 48%;
+  border: 1px solid #cceeff;
+}
+
+#border2 {
+  width: 30%;
+  border-left: 4px solid #cceeff;
 }
 
 #explorer {
@@ -145,10 +162,11 @@ button {
   border: 2px solid #ccd9ff;
 }
 
+button:hover {opacity: 0.6}
+
 .column {
   float: left;
   width: 50%;
-  padding: 10px;
 }
 
 .row:after {
@@ -156,6 +174,4 @@ button {
   display: table;
   clear: both;
 }
-
-button:hover {opacity: 0.6}
 
