--- a/views/explore_filtered_rooms.erb
+++ b/views/explore_filtered_rooms.erb
@@ -30,9 +30,9 @@
       <hr>
       <br><h2>Showing rooms available from <%= PrintDate.selected_string(@filtered_dates.first) %> to <%= PrintDate.selected_string(@filtered_dates.last)%></h2>
       <br><hr>
-      <section id='rooms'>
+      <section id='rooms_margin'>
         <% hit_counter = 0 %>
-        <% Room.all.each do |room| %>
+          <% Room.all.each do |room| %>
           <h2><% if ((room.availability & @filtered_dates ).any?) == true %></h2>
             <% hit_counter += 1 %>
             <h2><%= room.title %></h2><br>
@@ -45,12 +45,11 @@
               <br><hr>
             </form>
           <% end %>
-        <% end %>
-        <% if hit_counter == 0 %>
-          <h2>Sorry no rooms available on those dates!</h2>
-        <% end %>
+          <% end %>
+          <% if hit_counter == 0 %>
+            <h2>Sorry no rooms available on those dates!</h2>
+          <% end %>
       </section>
-      <%# </section> %>
     </section>
   </body>
 </html>
